// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Text Snapshot added optional style inline prop 1`] = `
<p
  className="jsx-1147781627"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot primary color of the theme 1`] = `
<p
  className="jsx-3165162673"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot secondary font-family of the theme 1`] = `
<p
  className="jsx-2864740902"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use align prop with value right 1`] = `
<p
  className="jsx-1675776318"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop 1`] = `
<p
  className="jsx-1147781627"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop and secondary color 1`] = `
<p
  className="jsx-3403561494"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop and secondary font 1`] = `
<p
  className="jsx-2864740902"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop, secondary font and align 1`] = `
<p
  className="jsx-1753509987"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot without arguments, take the default values, use childreen prop 1`] = `
<p
  className="jsx-1147781627"
  style={Object {}}
>
  This is a component Text!
</p>
`;
